tenants/platform/services/argo-cd/postInstall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - argocd.jdwlabs.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
